FLUID-919 improved button alignment in FF, I don't know if I can fix the Opera presentation. It looks pretty broken to me
svn path=/fluid/components/trunk/; revision=5272

--- a/src/webapp/fluid-components/css/Uploader.css
+++ b/src/webapp/fluid-components/css/Uploader.css
@@ -275,8 +275,7 @@
 .fluid-uploader-btns button {
     display: none;
     float: right;
-    padding-left: 0;
-    padding-right: 0;
+    padding: 0;
 }
 
 .fluid-uploader-btns button:focus {
